fixed visual bug on mobile platforms. linked vegetarian pizza page with contact page

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -489,7 +489,6 @@ details:hover .drooling-face-tongue {
 /* Contact page styles */
 
 #contact-section {
-  display: flex;
   position: relative;
   margin-top: -400px;
   max-width: 600px;
